# worldrailtimetables

./: Cargo.toml  nir_location_overrides.json  nr_location_overrides.json
src/: cif_importer.rs  error.rs  fetcher.rs  gtfs_importer.rs  gtfs_url_fetcher.rs  importer.rs  ir_manager.rs  main.rs  manager.rs  nir_fetcher.rs  nir_manager.rs  nr_fetcher.rs  nr_importer.rs  nr_manager.rs  nr_vstp_subscriber.rs  schedule.rs  schedule_manager.rs  sncf_fetcher.rs  subscriber.rs  uk_importer.rs  webui.rs
templates/: index.html.tera  location.html.tera  train.html.tera
