[package]
name = "worldrailtimetables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-compression = { version = "0.4.9", features = ["gzip", "deflate", "tokio"] }
async-trait = "0.1.68"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = { version = "0.8.2", features = ["serde"] }
config-file = "0.2.3"
env_logger = "0.11.8"
futures = "0.3.28"
gtfs-structures = "0.41.2"
itertools = "0.12.1"
rc-zip-tokio = "4.1.0"
reqwest = { version = "0.11.18", features = ["stream"] }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tokio-stomp = "0.4.0"
tokio-util = { version = "0.7.8", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
opt-level = 3
